added first php files

--- a/blocks.css
+++ b/blocks.css
@@ -1,7 +1,3 @@
-/* This is a partial blocks.css, you need to add more rules
-   to this file to complete the assignment.  Do not add any CSS
-   styling to the original index.htm / start.htm */
-
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -17,18 +13,15 @@ div {
 }
 
 a {
-   color: #ffffff;
+   color: #fefefe;
    text-decoration: none;
-   background-color: #2f418e;
+   background-color: #354eb1;
 }
 
 #link {
-   /*background-color: #2f418e;
-   width: 100px;*/
-   text-align: center;
+      text-align: center;
 }
 
-/* Here is one of many  CSS rules you will need... */
 #one {
       border-color: blue;
   bottom: 0;
